--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 </head>
-<body>
+<body ontouchstart="">
     <nav>
         <ul id="navigation" class="fade-in">
             <li class="index indexOn">
