--- a/creative.html
+++ b/creative.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@500;700&family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 </head>
-<body>
+<body ontouchstart="">
     <nav>
         <ul id="navigation" class="fade-in">
             <li class="index">
